log
Wed 08 May 2024 05:40:00 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
b3e5478
Wed 08 May 2024 05:42:35 PM UTC: 
 treemap.c | 43 ++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 42 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
02ffc54
Wed 08 May 2024 05:44:56 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  7|6
total_score: 5/70
ba8e9df
Wed 08 May 2024 05:46:36 PM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
9305e74
Wed 08 May 2024 05:53:27 PM UTC: 
 treemap.c | 44 ++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 42 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:134:24: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  134 |             TreeNode * child;
      |                        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
da77e39
Wed 08 May 2024 05:54:31 PM UTC: 
 treemap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  15|5
total_score: 20/70
47a0fec
Wed 08 May 2024 05:57:21 PM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  0|0
ec500b7
Wed 08 May 2024 05:57:43 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
a99e634
Wed 08 May 2024 05:58:05 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  17|4
total_score: 30/70
c51a96d
Wed 08 May 2024 06:01:31 PM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 40 insertions(+), 5 deletions(-)
 tests:  0|0
b5139ca
